--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,3 +3,16 @@
     border-color: transparent;
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--scroll-color);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--scroll-color-hover);
+}
